Getting most of the Hibernate tests "running" though not necessarily correct due to various strangeness by Hibernate.